# ETL_pipeline_end-to-end-project

./: .gitignore  main.py  mongo_db_test.py  push_data_to_db.py  pyproject.toml  requirements.txt
data_schema/: schema.yaml
network_security/compontents/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/constant/training_pipeline/: __init__.py
network_security/entity/: artifact_entity.py  config_entity.py
network_security/exception_handling/: exception.py
network_security/logging/: logger.py
network_security/utils/: estimator.py  ml_utlis.py  utils.py
notebook/: test.ipynb
