[project]
name = "etl-pipeline"
version = "0.1.0"
description = "End-to-end ETL + ML pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
]
